<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoScavenge</string>
    <string name="action_search">Private Hunt Search</string>
    <string name="action_add">Add New Hunt</string>
    <string name="huntName">Hunt Name</string>
    <string name="huntDesc">Hunt Description</string>
    <string name="privNum">Private Hunt Number</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="huntDetails">Hunt Details</string>
    <string name="start">Start Hunt</string>
    <string name="title_activity_guess">Guess Location</string>
    <string name="currentGuess">Current Distance:</string>
    <string name="pastGuess">Past Distance:</string>
    <string name="guessesRemain">Remaining Guesses:</string>
    <string name="guessBtnDesc">Guess Button</string>
    <string name="meters">meters</string>
    <string name="miles">miles</string>
    <string name="mile">mile</string>
    <string name="guesses">guesses</string>
    <string name="locFound">Location Found</string>
    <string name="title_activity_new_hunt">New Hunt</string>
    <string name="save">Save</string>
    <string name="priv">Make Private</string>
    <string name="huntID">Private Hunt ID</string>
    <string name="keep">Please save this id.</string>
    <string name="addEnd">Add Endpoint</string>
    <string name="numEnds">Number of Endpoints: </string>
    <string name="title_activity_new_endpoint">New Endpoint</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="current">Use current location</string>
    <string name="address">Search by address</string>
    <string name="addEndDesc">Manually enter location or use a button below to determine automatically.</string>
    <string name="addPic">Add picture (optional)</string>
    <string name="endDesc">Description of Endpoint</string>
    <string name="noGPS">This application requires GPS.  Press back when enabled.</string>
    <string name="notConnected">No Network Detected</string>
    <string name="notConnectedDesc">GeoScavenge uses network data to sync the latest data.  Please check your Network Settings to connect an available network.</string>
    <string name="ok">OK</string>
    <string name="connected">Will be getting information from remote source in next build</string>
    <string name="notFound">Hunt not found</string>
    <string name="loading">Loading</string>
    <string name="wait">Please wait.</string>
    <string name="huntLoc">Hunt City, Hunt State</string>
    <string name="setGuesses">Set Guesses</string>
    <string name="ends">ends</string>
    <string name="addressHint">Address</string>
    <string name="notAvail">Searching by address is not available</string>
    <string name="source">Select Image Source</string>
    <string name="required">All fields except image are required.</string>
    <string name="askSave">Would you like to save?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noEnds">Please enter at least one endpoint.</string>
    <string name="next">Next</string>
    <string name="unknown">Unknown</string>

</resources>
