<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.adamcrawford.geoscavenge.hunt.NewEndpointActivity$PlaceholderFragment">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addEndDesc"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/endLat"
        android:hint="@string/latitude"
        android:layout_marginBottom="10dp"
        android:inputType="numberDecimal" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/endLon"
        android:hint="@string/longitude"
        android:layout_marginBottom="10dp"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/loc_found"
            style="?android:attr/borderlessButtonStyle"
            android:contentDescription="@string/current"
            android:id="@+id/getCurrent"
            android:layout_weight=".30"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/current"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_search"
            style="?android:attr/borderlessButtonStyle"
            android:contentDescription="@string/address"
            android:id="@+id/searchAddress"
            android:layout_weight=".30"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_new_picture"
            style="?android:attr/borderlessButtonStyle"
            android:contentDescription="@string/addPic"
            android:id="@+id/addPic"
            android:layout_weight=".30"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addPic"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>
    </LinearLayout>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/endDesc"
        android:id="@+id/endDesc"
        android:lines="5"
        android:inputType="textMultiLine"
        android:linksClickable="false" />

</LinearLayout>
