<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.adamcrawford.geoscavenge.guess.GuessActivity.GuessFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:visibility="gone"
        android:id="@+id/currentContainer">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/currentGuess"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_weight=".5"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/currentGuess"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_weight=".5"
            android:gravity="end"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/pastContainer">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/pastGuess"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_weight=".5"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/pastGuess"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_weight=".5"
            android:gravity="end"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/guessesRemain"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_weight=".25"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".75"
            android:gravity="center_vertical"
            android:textAppearance="?android:textAppearanceLarge"
            android:id="@+id/guessesRemain"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guessButton"
            android:src="@drawable/guess"
            android:layout_centerInParent="true"
            style="?android:attr/borderlessButtonStyle"
            android:contentDescription="@string/guessBtnDesc"
            />
    </RelativeLayout>

</LinearLayout>
